# SemiGlobalMatching

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SemiGlobalMatching-vs2015.sln  SemiGlobalMatching-vs2019.sln  SemiGlobalMatching.sln
Data/Wood2/: drange.txt
Data/cone/: disp.bmp.cloud.txt  drange.txt
SemiGlobalMatching/: CMakeLists.txt  ReadMe.txt  SemiGlobalMatching-v19.vcxproj  SemiGlobalMatching.cpp  SemiGlobalMatching.h  SemiGlobalMatching.vcxproj  SemiGlobalMatching.vcxproj.filters  main.cpp  sgm_types.h  sgm_util.cpp  sgm_util.h  stdafx.cpp  stdafx.h  targetver.h
